lab7/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engineering-lab7-app
  namespace: engineering-lab7
  labels:
    app.kubernetes.io/name: engineering-lab7-app
    app.kubernetes.io/part-of: engineering-lab7
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: engineering-lab7-app
  ports:
    - name: http
      port: 80
      targetPort: http
